yamls/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main-app
        image: guyashkenazi/vehicle_management_server-main:latest
        ports:
        - containerPort: 9000
