yamls/visa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visa
spec:
  replicas: 2
  selector:
    matchLabels:
      app: visa
  template:
    metadata:
      labels:
        app: visa
    spec:
      containers:
      - name: visa-app
        image: guyashkenazi/vehicle_management_server-visa:latest
        ports:
        - containerPort: 9010
