yamls/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main
spec:
  selector:
    app: main
  ports:
  - name: main-port
    port: 9000
    targetPort: 9000
