yamls/mongodb-service-external.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
subsets:
  - addresses: 
      - ip: 10.48.4.29
    ports:
      - port: 27017
