yamls/visa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visa
spec:
  selector:
    app: visa
  ports:
  - name: visa-port
    port: 9010
    targetPort: 9010
